--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   rx_notifier: ^1.1.0
   pinput: ^1.2.0
   shared_preferences: ^2.0.6
+  styled_text: ^3.0.1
   
 dev_dependencies:
   flutter_modular_test: ^1.0.1
