--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: recipe_test
 description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0-Alpha+11
+version: 1.0.0
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
