Android INTERNET permission

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.recipe_test">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
    <application
         android:label="recipe_test"
         android:icon="@mipmap/ic_launcher">
